test/files/pos/t8497/B_2.scala
package p { object Test { Crash } }
