test/files/neg/t2458/pq.scala

package p {
  object X
}
package q {
  object X
}
